--- a/demo.html
+++ b/demo.html
@@ -12,6 +12,8 @@
     <body style="background: black;">
         <canvas id="canvas" width="1920" height="1080" style="display: block; margin: auto;  position: absolute; top:50%; left:50%; transform: translate(-50%, -50%);"></canvas>
         <script src="SlideOne.js"></script>
+        <script src="PolkaDotsEffect.js"></script>
+        <script src="ClockEffect.js"></script>
         <script>
             const _canvas = document.getElementById("canvas");
             const _source = new SlideOneSource();
