--- a/demo.html
+++ b/demo.html
@@ -18,7 +18,6 @@
             const _canvas = document.getElementById("canvas");
             const _source = new SlideOneSource();
             _source.bg = "background.jpg";
-            const slide1 = new SoSlideSource();
             _source.slides = [[
                 {text: "Page1", size: 96, x: 10, y: 10},
             ], [
@@ -31,9 +30,9 @@
 
             function onLoadCallback(){
                 _slide.draw();
-                _slide.registerMouseMoveEvent();
-                _slide.registerMouseDownEvent();
-                _slide.registerKeyDownEvent(window);
+                _slide.showCursor();
+                _slide.enableMouseDownEvent();
+                _slide.enableKeyDownEvent();
                 _slide.addBackgroundEffect(new PolkaDotsEffect());
                 _slide.addForegroundEffect(new ClockEffect());
                 _slide.enableFullWindowMode();
