fix clock parameter

--- a/demo.html
+++ b/demo.html
@@ -37,7 +37,7 @@
                 _slide.enableAutoSlide();
                 _slide.autoSlideInterval = 3;
                 _slide.addBackgroundEffect(new PolkaDotsEffect());
-                _slide.addForegroundEffect(new ClockEffect("TopRight"));
+                _slide.addForegroundEffect(new ClockEffect({color: "yellow", direction: "TopRight"}));
                 _slide.enableFullWindowMode();
                 _slide.startTimer();
             }
