--- a/demo.html
+++ b/demo.html
@@ -12,7 +12,7 @@
     <body style="background: black;">
         <canvas id="canvas" width="1920" height="1080" style="display: block; margin: auto;  position: absolute; top:50%; left:50%; transform: translate(-50%, -50%);"></canvas>
         <script src="SlideOne.js"></script>
-        <script src="PolkaDotsEffect.js"></script>
+        <script src="PolkaDotsFadeEffect.js"></script>
         <script src="ClockEffect.js"></script>
         <script>
             const _canvas = document.getElementById("canvas");
@@ -36,7 +36,7 @@
                 _slide.enableLoopSlide();
                 _slide.enableAutoSlide();
                 _slide.autoSlideInterval = 3;
-                _slide.addBackgroundEffect(new PolkaDotsEffect());
+                _slide.addBackgroundEffect(new PolkaDotsFadeEffect());
                 _slide.addForegroundEffect(new ClockEffect({color: "yellow", direction: "TopRight"}));
                 _slide.enableFullWindowMode();
                 _slide.startTimer();
