--- a/demo.html
+++ b/demo.html
@@ -27,6 +27,7 @@
             ]];
 
             const _slide = new SlideOne(_canvas, _source, onLoadCallback);
+            _slide.start();
 
             function onLoadCallback(){
                 _slide.draw();
