--- a/demos/demo1.html
+++ b/demos/demo1.html
@@ -14,7 +14,7 @@
         <script src="../SlideOne.js"></script>
         <script>
             const _canvas = document.getElementById("canvas");
-            const _slide = new SlideOne(_canvas, {slides: ["images/1.jpg", "images/2.jpg", "images/3.jpg", "images/4.jpg"], fullWindow: true});
+            const _slide = new SlideOne(_canvas, ["images/1.jpg", "images/2.jpg", "images/3.jpg", "images/4.jpg"]);
             _slide.start();
         </script>
     </body>
