--- a/demos/demo1.html
+++ b/demos/demo1.html
@@ -13,9 +13,11 @@
         <canvas id="canvas" width="1920" height="1080" style="display: block; margin: auto;  position: absolute; top:50%; left:50%; transform: translate(-50%, -50%);"></canvas>
         <script src="../SlideOne.js"></script>
         <script>
-            const _canvas = document.getElementById("canvas");
-            const _slide = new SlideOne(_canvas, ["images/1.jpg", "images/2.jpg", "images/3.jpg", "images/4.jpg"]);
-            _slide.start();
+            const canvas = document.getElementById("canvas");
+            const parameter0 = ["images/1.jpg", "images/2.jpg", "images/3.jpg", "images/4.jpg"];
+            const parameter = [{i: "images/1.jpg"}, {img: "images/2.jpg"}, {image: "images/3.jpg"}];
+            const slideOne = new SlideOne(_canvas, parameter);
+            slideOne.start();
         </script>
     </body>
 </html>
