--- a/demos/demo1.html
+++ b/demos/demo1.html
@@ -14,9 +14,9 @@
         <script src="../SlideOne.js"></script>
         <script>
             const canvas = document.getElementById("canvas");
-            const parameter0 = ["images/1.jpg", "images/2.jpg", "images/3.jpg", "images/4.jpg"];
-            const parameter = [{i: "images/1.jpg"}, {img: "images/2.jpg"}, {image: "images/3.jpg"}];
-            const slideOne = new SlideOne(_canvas, parameter);
+            const parameter = [["images/1.jpg", {i:"images/clubs.png", x:0, y:0}], "images/2.jpg", "images/3.jpg", "images/4.jpg"];
+            //const parameter = [{i: "images/1.jpg"}, {img: "images/2.jpg"}, {image: "images/3.jpg"}];
+            const slideOne = new SlideOne(canvas, parameter);
             slideOne.start();
         </script>
     </body>
