--- a/demos/demo2.html
+++ b/demos/demo2.html
@@ -14,7 +14,12 @@
         <script src="../SlideOne.js"></script>
         <script>
             const canvas = document.getElementById("canvas");
-            const parameter = [["images/1.jpg", "images/clubs.png"], ["images/2.jpg", {i:"images/spades.png", x:0, y:0}], "images/3.jpg", "images/4.jpg"];
+            const parameter = [
+                ["images/1.jpg", "images/clubs.png"],
+                ["images/2.jpg", {image:"images/spades.png", anchor:"topright"}],
+                ["images/3.jpg", {i:"images/diamonds.png", a:"bottomleft", x:100, y:-100}],
+                ["images/4.jpg", {i:"images/hearts.png", a:"bottomright"}]
+            ];
             const slideOne = new SlideOne(canvas, parameter);
             slideOne.start();
         </script>
