--- a/demos/demo1.html
+++ b/demos/demo1.html
@@ -14,7 +14,7 @@
         <script src="../SlideOne.js"></script>
         <script>
             const canvas = document.getElementById("canvas");
-            const parameter = [{i: "images/1.jpg"}, {img: "images/2.jpg"}, {image: "images/3.jpg"}];
+            const parameter = ["images/1.jpg", {i: "images/2.jpg"}, {image: "images/3.jpg"}];
             const slideOne = new SlideOne(canvas, parameter);
             slideOne.start();
         </script>
